--- a/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
@@ -9,8 +9,7 @@
     tools:context="icynote.ui.NotesList">
 
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -42,7 +41,6 @@
                 android:inputType="textPersonName"
                 android:ems="10"
                 android:id="@+id/editText"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
                 android:imeOptions="actionSearch"
