--- a/IcyNote/app/src/main/res/layout/fragment_settings.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_settings.xml
@@ -1,4 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_settings"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="icynote.ui.Settings">
+
+    <PreferenceCategory
+        android:title="@string/pref_sms_storage_title"
+        android:key="pref_key_storage_settings">
+        <CheckBoxPreference
+            android:key="pref_key_auto_delete"
+            android:summary="@string/pref_summary_auto_delete"
+            android:title="@string/pref_title_auto_delete"
+            android:defaultValue="false" />
+        <Preference
+            android:key="pref_key_sms_delete_limit"
+            android:dependency="pref_key_auto_delete"
+            android:summary="@string/pref_summary_delete_limit"
+            android:title="@string/pref_title_sms_delete" />
+        <Preference
+            android:key="pref_key_mms_delete_limit"
+            android:dependency="pref_key_auto_delete"
+            android:summary="@string/pref_summary_delete_limit"
+            android:title="@string/pref_title_mms_delete"  />
+    </PreferenceCategory>
+
+</PreferenceScreen>
+
+    <!--
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_settings"
@@ -12,6 +47,31 @@
 
     <include layout="@layout/menu_button" />
 
+    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+        <PreferenceCategory
+            android:title="@string/pref_sms_storage_title"
+            android:key="pref_key_storage_settings">
+            <CheckBoxPreference
+                android:key="pref_key_auto_delete"
+                android:summary="@string/pref_summary_auto_delete"
+                android:title="@string/pref_title_auto_delete"
+                android:defaultValue="false"... />
+            <Preference
+                android:key="pref_key_sms_delete_limit"
+                android:dependency="pref_key_auto_delete"
+                android:summary="@string/pref_summary_delete_limit"
+                android:title="@string/pref_title_sms_delete"... />
+            <Preference
+                android:key="pref_key_mms_delete_limit"
+                android:dependency="pref_key_auto_delete"
+                android:summary="@string/pref_summary_delete_limit"
+                android:title="@string/pref_title_mms_delete" ... />
+        </PreferenceCategory>
+
+    </PreferenceScreen>
+
+
+    <!--
     <TextView
         android:text="@string/Styles"
         android:layout_width="wrap_content"
@@ -67,3 +127,4 @@
         android:layout_alignStart="@+id/styles_list" />
 
 </RelativeLayout>
+-->
